-- 0.701 --
* Fixed an upload bug
* Reworked some context menu stuff
* Replaced yassl with OpenSSL, SSL certs no longer require external OpenSSL application

-- 0.700 2007-10-11 --
* [bug 1102] Fixed move/rename queue folder (thanks mikael eman)
* [bug 1124] Fixed thread shutdown on *nix (thanks mikael eman)
* Fixed invalid share size
* [bug 1127] Fixed crash on invalid file list (thanks steven sheehy)
* [bug 1019] Reworked initial filelist dir (thanks mikael eman)
* Moved to smartwin to enable mingw compiling (thanks cologic, ullner, poy)
* Removed notepad loading compatibility code for notepad texts from versions < 0.20
* Fixed time issues with DC++ running for more than 49 days
* [bug 980] Fixed PM's when popup is disabled (thanks ullner)
* [bug 1066] Search for alternates not available on uploads (thanks ullner)
* [bug 1104] Better error message on dupe source (thanks ullner)
* [bug 1132] Download queue updated when users go offline (thanks stephan hohe)
* [bug 1133] Fixed max tab rows being reset (thanks pothead)
* [bug 1134] Use SO_REUSEADDR for connection manager socket (thanks mikael eman)
* [bug 1136] Fixed dupe changelog rebuild (thanks pothead)
* [bug 1139] Fixed download delay in some cases (thanks mikael eman)
* [bug 1144] Added possibility to add many hub lists in one go (use ; as separator) (thanks poy)
* [bug 1152] Only refresh if there are directories shared (thanks ullner)
* [bug 1153] More shell menus (thanks poy)
* [bug 1159] Removed unnecessary resume position reset (thanks cologic)
* Removed rollback support - advanced TTH resume is now always used (thanks cologic)
* Switched to mingw/stlport5.1
* Uninstaller removes adc registry key (thanks ullner)
* Private message status bar text handling more similar to hub frame
* yassl upgraded
* gcc 4.3 compile fix (thanks steven sheehy)
* Some upgrades to the charset handling (thanks steven sheehy)
* Fixed socket signal interrupts (thanks mikael eman)
* Spy frame average fix