@@ -37,61 +37,96 @@
 
 namespace dcpp {
 
+
+
 CryptoManager::CryptoManager()
 :
-	dh(DH_new()),
 	certsLoaded(false),
 	lock("EXTENDEDPROTOCOLABCABCABCABCABCABC"),
 	pk("DCPLUSPLUS" VERSIONSTRING "ABCABC")
 {
 	SSL_library_init();
 
-	// Probably should check the return value of these.
-	clientContext = SSL_CTX_new(TLSv1_client_method());
-	clientVerContext = SSL_CTX_new(TLSv1_client_method());
-	serverContext = SSL_CTX_new(TLSv1_server_method());
-	serverVerContext = SSL_CTX_new(TLSv1_server_method());
+	clientContext.reset(SSL_CTX_new(TLSv1_client_method()));
+	clientVerContext.reset(SSL_CTX_new(TLSv1_client_method()));
+	serverContext.reset(SSL_CTX_new(TLSv1_server_method()));
+	serverVerContext.reset(SSL_CTX_new(TLSv1_server_method()));
+	
+	if(clientContext && clientVerContext && serverContext && serverVerContext) {
+		dh.reset(DH_new());
+		
+        static unsigned char dh4096_p[]={
+                0xCA,0x35,0xA8,0xBB,0x65,0x33,0x28,0xC6,0x3F,0xD7,0x21,0x55,
+                0x95,0xDF,0xC0,0xDC,0x11,0x10,0x23,0x2D,0x1E,0xD6,0x52,0x23,
+                0xA1,0x52,0xB8,0xDD,0x4A,0x25,0xEE,0xF4,0x78,0xB6,0x89,0x9E,
+                0xB6,0x33,0xEB,0x01,0xA6,0x46,0x31,0xD8,0x3D,0x12,0xB4,0x7B,
+                0x1F,0x64,0x0C,0x84,0x10,0x80,0xFB,0x4F,0x74,0x21,0xA3,0x9B,
+                0xF5,0x97,0xD1,0x05,0x97,0x9D,0x52,0x4F,0x91,0x3C,0xE1,0xA8,
+                0x97,0xE0,0x33,0x9D,0xCB,0x9D,0x9D,0x2A,0xB5,0x3E,0xF5,0x8D,
+                0x7F,0xEE,0x91,0xEE,0x4E,0xC5,0xA6,0xAB,0x54,0xD9,0xC2,0xA5,
+                0x0D,0x2E,0xEA,0x1A,0x39,0xFD,0x30,0x4A,0x1C,0xB7,0x34,0x2B,
+                0x7D,0x51,0xF6,0xB1,0xD1,0x8D,0xCE,0x28,0xDC,0xF9,0xDE,0x34,
+                0xAF,0x1E,0xD1,0x7C,0xC2,0xD3,0x38,0x8E,0xBD,0x35,0x01,0x53,
+                0xDD,0x2E,0xB5,0x83,0xC8,0xEF,0x08,0x15,0x59,0x6E,0xA3,0xC4,
+                0x71,0x57,0x8C,0x4D,0xFD,0xA7,0x19,0x40,0x88,0x68,0x4E,0xD6,
+                0x8F,0x5C,0xE5,0xEC,0xCF,0x5F,0xEB,0x9A,0xA4,0x66,0x40,0x8B,
+                0x02,0x87,0xA7,0x3A,0x58,0x81,0xF1,0x6A,0x14,0x16,0x75,0x7D,
+                0x33,0x01,0xEB,0x3F,0xA8,0x02,0xDC,0x09,0x32,0x12,0x00,0x20,
+                0x47,0xFF,0x01,0x14,0xFE,0x9E,0x3A,0x44,0x4D,0xED,0x85,0xD5,
+                0xDA,0x2F,0xE3,0x99,0xCE,0xDA,0x84,0x64,0xCB,0x0C,0x8C,0x00,
+                0x90,0x19,0x70,0x1C,0x00,0x1D,0x63,0x3C,0x77,0x16,0x8D,0x3D,
+                0x86,0x97,0x22,0x23,0x2F,0x7B,0xAB,0xB8,0xEB,0x94,0xA4,0x01,
+                0xAA,0x34,0xBA,0xEA,0x7D,0x7A,0x37,0xB7,0x0C,0x75,0xEB,0x00,
+                0x8D,0x52,0x7A,0xE2,0xDF,0x78,0x7C,0x4F,0x54,0x9E,0xA4,0xDD,
+                0xC9,0xFC,0x08,0x7C,0x45,0x70,0x43,0x0F,0x39,0xE3,0x7E,0x48,
+                0xB8,0xDC,0x9D,0xEC,0xB9,0x51,0x29,0x86,0x29,0x60,0xF6,0x4F,
+                0xF7,0xCA,0xDD,0x3B,0x7F,0xAE,0xE2,0x54,0x4C,0x53,0x42,0x55,
+                0xC0,0x39,0x24,0xE1,0x1A,0xAD,0x9E,0xCC,0x75,0x5E,0xF1,0xE2,
+                0xD6,0xAE,0xCD,0x9A,0x91,0xC3,0x7B,0xE5,0x29,0xAD,0xCA,0xC2,
+                0x00,0xC1,0xF9,0xF4,0x6D,0xD2,0x4B,0xD4,0x5A,0x56,0x39,0xCD,
+                0xAC,0xCA,0xE7,0xD1,0x8C,0x15,0x4D,0x2B,0x59,0x67,0x29,0x72,
+                0xE7,0x40,0x14,0x81,0x9E,0x26,0x48,0xF8,0x6C,0x51,0xF5,0xBE,
+                0x64,0xD1,0xF4,0x4D,0x98,0xE7,0xFD,0x5E,0x23,0x1E,0xDF,0xBA,
+                0xBD,0x2E,0xB1,0x81,0x26,0x98,0x9C,0x2F,0xE8,0xD5,0x32,0x6B,
+                0x94,0x91,0x8C,0x2E,0xB8,0xD9,0xC9,0x2F,0x22,0x9D,0xA6,0x52,
+                0x02,0xDF,0x99,0x63,0x64,0x7E,0xB8,0x68,0xAB,0x17,0x54,0x7E,
+                0xED,0x9E,0xD1,0x45,0x64,0x36,0x65,0xE8,0x09,0x50,0xAB,0xB0,
+                0xD4,0x8C,0x79,0x9F,0x4C,0xB8,0x26,0x45,0xBE,0x0F,0xDE,0x14,
+                0x6F,0xEC,0x70,0x21,0x1A,0xA0,0x1D,0xD0,0x7D,0xA2,0x0F,0x85,
+                0xA5,0x7C,0xC1,0x0A,0x74,0xB1,0x7B,0x5A,0xD2,0xC4,0x0F,0xD5,
+                0x90,0x24,0x3E,0xEC,0x89,0x7E,0xB8,0xED,0x6E,0x19,0x85,0xB9,
+                0x58,0x36,0xA1,0x33,0x7D,0x14,0xFE,0x4F,0x55,0xA9,0xB6,0x42,
+                0x7E,0x97,0x2A,0x96,0x50,0x14,0x0D,0xEA,0x02,0xB1,0xD2,0x22,
+                0xEB,0xE7,0xF4,0xAC,0xB6,0x37,0xCA,0xAB,0x4A,0x1E,0x4D,0x4E,
+                0xCF,0xFE,0x5D,0xEF,0x23,0x78,0xC6,0xBB,
+                };
+        
+        static unsigned char dh4096_g[]={
+                0x02,
+                };
 
-	static unsigned char dh512_p[] =
-	{
-		0xDA,0x58,0x3C,0x16,0xD9,0x85,0x22,0x89,0xD0,0xE4,0xAF,0x75,
-			0x6F,0x4C,0xCA,0x92,0xDD,0x4B,0xE5,0x33,0xB8,0x04,0xFB,0x0F,
-			0xED,0x94,0xEF,0x9C,0x8A,0x44,0x03,0xED,0x57,0x46,0x50,0xD3,
-			0x69,0x99,0xDB,0x29,0xD7,0x76,0x27,0x6B,0xA2,0xD3,0xD4,0x12,
-			0xE2,0x18,0xF4,0xDD,0x1E,0x08,0x4C,0xF6,0xD8,0x00,0x3E,0x7C,
-			0x47,0x74,0xE8,0x33,
-	};
+		if(dh) {
+			dh->p = BN_bin2bn(dh4096_p, sizeof(dh4096_p), 0);
+			dh->g = BN_bin2bn(dh4096_g, sizeof(dh4096_g), 0);
 
-	static unsigned char dh512_g[] =
-	{
-		0x02,
-	};
-
-	if(dh) {
-		dh->p = BN_bin2bn(dh512_p, sizeof(dh512_p), 0);
-		dh->g = BN_bin2bn(dh512_g, sizeof(dh512_g), 0);
-
-		if (!dh->p || !dh->g) {
-			DH_free(dh);
-			dh = 0;
-		} else {
-			SSL_CTX_set_tmp_dh(serverContext, dh);
-			SSL_CTX_set_tmp_dh(serverVerContext, dh);
+			if (!dh->p || !dh->g) {
+				dh.reset();
+			} else {
+				SSL_CTX_set_options(serverContext, SSL_OP_SINGLE_DH_USE);
+				SSL_CTX_set_options(serverVerContext, SSL_OP_SINGLE_DH_USE);
+				SSL_CTX_set_tmp_dh(serverContext, (DH*)dh);
+				SSL_CTX_set_tmp_dh(serverVerContext, (DH*)dh);
+			}
 		}
+
+		SSL_CTX_set_verify(serverContext, SSL_VERIFY_NONE, 0);
+		SSL_CTX_set_verify(clientContext, SSL_VERIFY_NONE, 0);
+		SSL_CTX_set_verify(clientVerContext, SSL_VERIFY_PEER | SSL_VERIFY_FAIL_IF_NO_PEER_CERT, 0);
+		SSL_CTX_set_verify(serverVerContext, SSL_VERIFY_PEER | SSL_VERIFY_FAIL_IF_NO_PEER_CERT, 0);
 	}
 }
 
 CryptoManager::~CryptoManager() {
-	if(serverContext)
-		SSL_CTX_free(serverContext);
-	if(clientContext)
-		SSL_CTX_free(clientContext);
-	if(serverVerContext)
-		SSL_CTX_free(serverVerContext);
-	if(clientVerContext)
-		SSL_CTX_free(clientVerContext);
-	if(dh)
-		DH_free(dh);
 }
 
 bool CryptoManager::TLSOk() const throw() {
@@ -107,18 +142,23 @@ void CryptoManager::generateCertificate() throw(CryptoException) {
 		throw CryptoException("No certificate file chosen");
 	}
 
-	BIGNUM* bn = BN_new();
-	RSA* rsa = RSA_new();
-	EVP_PKEY* pkey = EVP_PKEY_new();
-	X509_NAME *nm = X509_NAME_new();
+	ssl::BIGNUM bn(BN_new());
+	ssl::RSA rsa(RSA_new());
+	ssl::EVP_PKEY pkey(EVP_PKEY_new());
+	ssl::X509_NAME nm(X509_NAME_new());
 	const EVP_MD *digest = EVP_sha1();
-	X509 *x509ss = X509_new();
-	int days = 3650;
+	ssl::X509 x509ss(X509_new());
+	
+	if(!bn || !rsa || !pkey || !nm || !x509ss) {
+		throw new CryptoException("Error creating objects for cert generation");
+	}
+	
+	int days = 10;
 	int keylength = 2048;
 
 	const char* err = NULL;
 	
-#define CHECK(n) if(!(n)) { err = #n; goto end; }
+#define CHECK(n) if(!(n)) { throw CryptoException(#n); }
 	
 	// Generate key pair
 	CHECK((BN_set_word(bn, RSA_F4)))
@@ -151,27 +191,12 @@ void CryptoManager::generateCertificate() throw(CryptoException) {
 		PEM_write_X509(f, x509ss);
 		fclose(f);
 	}
-end:
-
-	X509_free(x509ss);
-	X509_NAME_free(nm);
-	EVP_PKEY_free(pkey);
-	RSA_free(rsa);
-	BN_free(bn);
-	
-	if(err) {
-		throw CryptoException(err);
-	}
 }
 
 void CryptoManager::loadCertificates() throw() {
-	if(!BOOLSETTING(USE_TLS))
+	if(!BOOLSETTING(USE_TLS) || !clientContext || !clientVerContext || !serverContext || !serverVerContext)
 		return;
 
-	SSL_CTX_set_verify(serverContext, SSL_VERIFY_NONE, 0);
-	SSL_CTX_set_verify(clientContext, SSL_VERIFY_NONE, 0);
-	SSL_CTX_set_verify(clientVerContext, SSL_VERIFY_PEER | SSL_VERIFY_FAIL_IF_NO_PEER_CERT, 0);
-	SSL_CTX_set_verify(serverVerContext, SSL_VERIFY_PEER | SSL_VERIFY_FAIL_IF_NO_PEER_CERT, 0);
 
 	const string& cert = SETTING(TLS_CERTIFICATE_FILE);
 	const string& key = SETTING(TLS_PRIVATE_KEY_FILE);
@@ -245,9 +270,50 @@ void CryptoManager::loadCertificates() throw() {
 	certsLoaded = true;
 }
 
-
 bool CryptoManager::checkCertificate() throw() {
-	/// @todo Check if CID in cert is ok and if cert hasn't expired
+	FILE* f = fopen(SETTING(TLS_CERTIFICATE_FILE).c_str(), "r");
+	if(!f) {
+		return false;
+	}
+
+	X509* tmpx509 = NULL;
+	PEM_read_X509(f, &tmpx509, NULL, NULL);
+	fclose(f);
+	
+	if(!tmpx509) {
+		return false;
+	}
+	ssl::X509 x509(tmpx509);
+	
+	// Check subject name
+	X509_NAME* name = X509_get_subject_name(x509);
+	if(!name) {
+		return false;
+	}
+	int i = X509_NAME_get_index_by_NID(name, NID_commonName, -1);
+	if(i == -1) {
+		return false;
+	}
+	X509_NAME_ENTRY* entry = X509_NAME_get_entry(name, i);
+	ASN1_STRING* str = X509_NAME_ENTRY_get_data(entry);
+	if(!str) {
+		return false;
+	}
+	
+	unsigned char* buf = 0;
+	i = ASN1_STRING_to_UTF8(&buf, str);
+	if(i < 0) {
+		return false;
+	}
+	std::string cn((char*)buf, i);
+	OPENSSL_free(buf);
+	
+	if(cn != ClientManager::getInstance()->getMyCID().toBase32()) {
+		return false;
+	}
+	
+	// TODO check expired
+	
 	return true;
 }
 
